--- a/SimpleCalculator/MainWindow.xaml
+++ b/SimpleCalculator/MainWindow.xaml
@@ -5,19 +5,190 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SimpleCalculator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <StackPanel VerticalAlignment="Center">
-            <Label Content="Result"
-                   Margin="0, 0, 0, 10"/>
-            <TextBox Text="0"
-                     Margin="0, 0, 0, 10"/>
-            <TextBox Text="0"
-                     Margin="0, 0, 0, 10"/>
-            <Button Content="Calculate"
-                    Margin="0, 0, 0, 10"
-                    Background="DodgerBlue"
-                    Foreground="White"/>
-        </StackPanel>
+        Title="MainWindow" Height="600" Width="400">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.5*"/>
+        </Grid.RowDefinitions>
+
+        <Label Content="0"
+               Grid.ColumnSpan="4"
+               HorizontalAlignment="Right"
+               VerticalAlignment="Bottom"
+               FontSize="60"/>
+
+        <Button
+            Margin="5"
+            Content="AC"
+            Grid.Row="1"
+            Grid.Column="0"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="+/1"
+            Grid.Row="1"
+            Grid.Column="1"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="%"
+            Grid.Row="1"
+            Grid.Column="2"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="/"
+            Grid.Row="1"
+            Grid.Column="3"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="7"
+            Grid.Row="2"
+            Grid.Column="0"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="8"
+            Grid.Row="2"
+            Grid.Column="1"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="9"
+            Grid.Row="2"
+            Grid.Column="2"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="*"
+            Grid.Row="2"
+            Grid.Column="3"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="4"
+            Grid.Row="3"
+            Grid.Column="0"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="5"
+            Grid.Row="3"
+            Grid.Column="1"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="6"
+            Grid.Row="3"
+            Grid.Column="2"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="-"
+            Grid.Row="3"
+            Grid.Column="3"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="1"
+            Grid.Row="4"
+            Grid.Column="0"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="2"
+            Grid.Row="4"
+            Grid.Column="1"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="3"
+            Grid.Row="4"
+            Grid.Column="2"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="+"
+            Grid.Row="4"
+            Grid.Column="3"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="0"
+            Grid.Row="5"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            />
+
+        <Button
+            Margin="5"
+            Content="."
+            Grid.Row="5"
+            Grid.Column="2"
+            Grid.ColumnSpan="1"
+            />
+
+        <Button
+            Margin="5"
+            Content="="
+            Grid.Row="5"
+            Grid.Column="3"
+            Grid.ColumnSpan="1"
+            />
+
+        <Label
+            Grid.Row="6"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            Grid.ColumnSpan="4"
+            Content="Calculator by Asif Zaidov"
+            
+            />
     </Grid>
 </Window>
