--- a/SimpleCalculator/MainWindow.xaml
+++ b/SimpleCalculator/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SimpleCalculator"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="400">
-    <Grid Margin="10">
+    <Grid Margin="10" Background="Beige">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -25,12 +25,14 @@
         </Grid.RowDefinitions>
 
         <Label Content="0"
+               x:Name="resultLabel"
                Grid.ColumnSpan="4"
                HorizontalAlignment="Right"
                VerticalAlignment="Bottom"
                FontSize="60"/>
 
         <Button
+            x:Name="acButton"
             Margin="5"
             Content="AC"
             Grid.Row="1"
@@ -39,14 +41,16 @@
             />
 
         <Button
+            x:Name="negativeButton"
             Margin="5"
-            Content="+/1"
+            Content="+/-"
             Grid.Row="1"
             Grid.Column="1"
             Grid.ColumnSpan="1"
             />
 
         <Button
+            x:Name="percentageButton"
             Margin="5"
             Content="%"
             Grid.Row="1"
@@ -55,6 +59,8 @@
             />
 
         <Button
+            x:Name="divideButton"
+            Click="OperationButton_Click"
             Margin="5"
             Content="/"
             Grid.Row="1"
@@ -63,6 +69,8 @@
             />
 
         <Button
+            x:Name="sevenButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="7"
             Grid.Row="2"
@@ -71,6 +79,8 @@
             />
 
         <Button
+            x:Name="eightButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="8"
             Grid.Row="2"
@@ -79,6 +89,8 @@
             />
 
         <Button
+            x:Name="nineButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="9"
             Grid.Row="2"
@@ -87,6 +99,8 @@
             />
 
         <Button
+            x:Name="multiplyButton"
+            Click="OperationButton_Click"
             Margin="5"
             Content="*"
             Grid.Row="2"
@@ -95,6 +109,8 @@
             />
 
         <Button
+            x:Name="fourButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="4"
             Grid.Row="3"
@@ -103,6 +119,8 @@
             />
 
         <Button
+            x:Name="fiveButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="5"
             Grid.Row="3"
@@ -111,6 +129,8 @@
             />
 
         <Button
+            x:Name="sixButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="6"
             Grid.Row="3"
@@ -119,6 +139,8 @@
             />
 
         <Button
+            x:Name="minusButton"
+            Click="OperationButton_Click"
             Margin="5"
             Content="-"
             Grid.Row="3"
@@ -127,6 +149,8 @@
             />
 
         <Button
+            x:Name="oneButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="1"
             Grid.Row="4"
@@ -135,6 +159,8 @@
             />
 
         <Button
+            x:Name="twoButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="2"
             Grid.Row="4"
@@ -143,6 +169,8 @@
             />
 
         <Button
+            x:Name="threeButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="3"
             Grid.Row="4"
@@ -151,6 +179,8 @@
             />
 
         <Button
+            x:Name="plusButton"
+            Click="OperationButton_Click"
             Margin="5"
             Content="+"
             Grid.Row="4"
@@ -159,6 +189,8 @@
             />
 
         <Button
+            x:Name="zeroButton"
+            Click="NumberButton_Click"
             Margin="5"
             Content="0"
             Grid.Row="5"
@@ -167,6 +199,8 @@
             />
 
         <Button
+            x:Name="dotButton"
+            Click="dotButton_Click"
             Margin="5"
             Content="."
             Grid.Row="5"
@@ -175,6 +209,7 @@
             />
 
         <Button
+            x:Name="equalButton"
             Margin="5"
             Content="="
             Grid.Row="5"
