--- a/SimpleCalculator/MainWindow.xaml
+++ b/SimpleCalculator/MainWindow.xaml
@@ -37,8 +37,7 @@
 
         <Button
             x:Name="acButton"
-            Foreground="Black"
-            Margin="5"
+            Style="{StaticResource additionalButtonsStyle}"
             Content="AC"
             Grid.Row="1"
             Grid.Column="0"
@@ -47,8 +46,7 @@
 
         <Button
             x:Name="negativeButton"
-            Foreground="Black"
-            Margin="5"
+            Style="{StaticResource additionalButtonsStyle}"
             Content="+/-"
             Grid.Row="1"
             Grid.Column="1"
@@ -57,8 +55,7 @@
 
         <Button
             x:Name="percentageButton"
-            Foreground="Black"
-            Margin="5"
+            Style="{StaticResource additionalButtonsStyle}"
             Content="%"
             Grid.Row="1"
             Grid.Column="2"
@@ -68,8 +65,7 @@
         <Button
             x:Name="divideButton"
             Click="OperationButton_Click"
-            Background="{StaticResource operationsColor}"
-            Margin="5"
+            Style="{StaticResource operationsButtonsStyle}"
             Content="/"
             Grid.Row="1"
             Grid.Column="3"
@@ -79,8 +75,7 @@
         <Button
             x:Name="sevenButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="7"
             Grid.Row="2"
             Grid.Column="0"
@@ -90,8 +85,7 @@
         <Button
             x:Name="eightButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="8"
             Grid.Row="2"
             Grid.Column="1"
@@ -101,8 +95,7 @@
         <Button
             x:Name="nineButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="9"
             Grid.Row="2"
             Grid.Column="2"
@@ -112,8 +105,7 @@
         <Button
             x:Name="multiplyButton"
             Click="OperationButton_Click"
-            Background="{StaticResource operationsColor}"
-            Margin="5"
+            Style="{StaticResource operationsButtonsStyle}"
             Content="*"
             Grid.Row="2"
             Grid.Column="3"
@@ -123,8 +115,7 @@
         <Button
             x:Name="fourButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="4"
             Grid.Row="3"
             Grid.Column="0"
@@ -134,8 +125,7 @@
         <Button
             x:Name="fiveButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="5"
             Grid.Row="3"
             Grid.Column="1"
@@ -145,8 +135,7 @@
         <Button
             x:Name="sixButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="6"
             Grid.Row="3"
             Grid.Column="2"
@@ -156,8 +145,7 @@
         <Button
             x:Name="minusButton"
             Click="OperationButton_Click"
-            Background="{StaticResource operationsColor}"
-            Margin="5"
+            Style="{StaticResource operationsButtonsStyle}"
             Content="-"
             Grid.Row="3"
             Grid.Column="3"
@@ -167,8 +155,7 @@
         <Button
             x:Name="oneButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="1"
             Grid.Row="4"
             Grid.Column="0"
@@ -178,8 +165,7 @@
         <Button
             x:Name="twoButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="2"
             Grid.Row="4"
             Grid.Column="1"
@@ -189,8 +175,7 @@
         <Button
             x:Name="threeButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="3"
             Grid.Row="4"
             Grid.Column="2"
@@ -200,8 +185,7 @@
         <Button
             x:Name="plusButton"
             Click="OperationButton_Click"
-            Background="{StaticResource operationsColor}"
-            Margin="5"
+            Style="{StaticResource operationsButtonsStyle}"
             Content="+"
             Grid.Row="4"
             Grid.Column="3"
@@ -211,8 +195,7 @@
         <Button
             x:Name="zeroButton"
             Click="NumberButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="0"
             Grid.Row="5"
             Grid.Column="0"
@@ -222,8 +205,7 @@
         <Button
             x:Name="dotButton"
             Click="dotButton_Click"
-            Background="{StaticResource numbersColor}"
-            Margin="5"
+            Style="{StaticResource numberButtonsStyle}"
             Content="."
             Grid.Row="5"
             Grid.Column="2"
@@ -232,8 +214,7 @@
 
         <Button
             x:Name="equalButton"
-            Background="{StaticResource operationsColor}"
-            Margin="5"
+            Style="{StaticResource operationsButtonsStyle}"
             Content="="
             Grid.Row="5"
             Grid.Column="3"
